fixed sculpture covering text on older mobile devices

--- a/styles.css
+++ b/styles.css
@@ -297,7 +297,7 @@ li {
   }
 
   .links-page {
-    height: 100vh;
+    height: 115vh;
   }
 
   .color-block {
